--- a/swagshop/scss/styles.css
+++ b/swagshop/scss/styles.css
@@ -557,8 +557,8 @@ footer {
 
   nav ul li a {
     display: block;
-    background-color: #298552;
-    color: #eee;
+    background-color: rgb(29, 94, 58);
+    color: white;
     border-right: 1px solid rgba(0, 0, 0, 0.2);
     padding: 0.5rem 1rem;
     text-decoration: none;
